--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/filipedeschamps/video-maker#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "google-trends-api": "^4.9.0",
     "imdb-scrapper": "^2.2.0",
     "readline-sync": "^1.4.9",
     "rss-parser": "^3.6.2",
