--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/filipedeschamps/video-maker#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "cli-progress": "^2.1.1",
     "fastify": "^2.2.0",
     "gm": "^1.23.1",
     "google-trends-api": "^4.9.0",
