--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/index.js",
+            "console": "integratedTerminal"
+        },
         {
             "type": "node",
             "request": "launch",
             "name": "nodemon",
-            "runtimeExecutable": "/home/leo/.nvm/versions/node/v11.12.0/bin/nodemon",
+            "runtimeExecutable": "nodemon",
             "program": "${workspaceFolder}/index.js",
             "restart": true,
             "console": "integratedTerminal",
