--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "image-downloader": "^3.4.2",
     "imdb-scrapper": "^2.2.0",
     "jsonpath": "^1.0.1",
+    "mkdirp": "^0.5.1",
     "promises-progress": "^1.0.3",
     "prompts": "^2.0.4",
     "request": "^2.88.0",
