--- a/package.json
+++ b/package.json
@@ -25,27 +25,27 @@
   "homepage": "https://github.com/filipedeschamps/video-maker#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
-    "cli-progress": "^2.1.1",
-    "fastify": "^2.2.0",
+    "cli-progress": "^3.3.1",
+    "fastify": "^2.10.0",
     "gm": "^1.23.1",
     "google-trends-api": "^4.9.0",
-    "googleapis": "^39.2.0",
+    "googleapis": "^45.0.0",
     "got": "^9.6.0",
-    "image-downloader": "^3.4.2",
-    "imdb-scrapper": "^2.2.0",
-    "jsonpath": "^1.0.1",
+    "ibm-watson": "^5.1.0",
+    "image-downloader": "^3.5.0",
+    "imdb-scrapper": "^2.3.0",
+    "jsonpath": "^1.0.2",
     "mkdirp": "^0.5.1",
     "promises-progress": "^1.0.3",
-    "prompts": "^2.0.4",
+    "prompts": "^2.3.0",
     "ramda": "^0.26.1",
     "rapid-downloader": "^1.2.5",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "rimraf": "^2.6.3",
-    "rss-parser": "^3.7.0",
+    "request-promise": "^4.2.5",
+    "rimraf": "^3.0.0",
+    "rss-parser": "^3.7.3",
     "rxjs": "^6.4.0",
-    "sbd": "^1.0.15",
-    "watson-developer-cloud": "^4.0.1"
+    "sbd": "^1.0.16"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
